# TTTerm

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ttterm.bat
include/: tctassets.hpp  tctaudio.hpp  tctdisplay.hpp  tctfiles.hpp  tctgame.hpp  tctinput.hpp  tctobject.hpp  tctscene.hpp  tcttypes.hpp  tctutils.hpp  tt_assets.hpp  tt_types.hpp  tt_utils.hpp
src/: assets.cpp  main.cpp  tctassets.cpp  tctaudio.cpp  tctdisplay.cpp  tctfiles.cpp  tctgame.cpp  tctinput.cpp  utils.cpp
